# representation-cvis

./: README.md  pyproject.toml
notebooks/: Descricao.ipynb  Introducao_Segmentacao_DL.ipynb  Representacao.ipynb
